; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_getlogname_malloc.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_user-util.c_getlogname_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }

@STDIN_FILENO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getlogname_malloc() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.stat, align 4
  %3 = load i32, i32* @STDIN_FILENO, align 4
  %4 = call i64 @isatty(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load i32, i32* @STDIN_FILENO, align 4
  %8 = call i64 @fstat(i32 %7, %struct.stat* %2)
  %9 = icmp sge i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %6
  %11 = getelementptr inbounds %struct.stat, %struct.stat* %2, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %1, align 4
  br label %15

13:                                               ; preds = %6, %0
  %14 = call i32 (...) @getuid()
  store i32 %14, i32* %1, align 4
  br label %15

15:                                               ; preds = %13, %10
  %16 = load i32, i32* %1, align 4
  %17 = call i8* @uid_to_name(i32 %16)
  ret i8* %17
}

declare dso_local i64 @isatty(i32) #1

declare dso_local i64 @fstat(i32, %struct.stat*) #1

declare dso_local i32 @getuid(...) #1

declare dso_local i8* @uid_to_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
